<resources>
    <string name="app_name">Coudelaria</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="cavalos">Horses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Coudelarias" translatable="false">Coudelarias</string>
    <string name="Criadores" translatable="false">Criadores</string>
    <string name="Provas" translatable="false"> Provas </string>
    <string name="Classific" translatable="false"> Classificação </string>
    <string name="Users" translatable="false"> Users </string>
    <string name="AdicionarCavalo">Adicionar Cavalo</string>
    <string name="EditarCavalo">Editar Cavalo</string>
</resources>